--- a/C2dmSharp.Server/C2dmSharp.Server.csproj
+++ b/C2dmSharp.Server/C2dmSharp.Server.csproj
@@ -32,6 +32,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
@@ -47,6 +48,9 @@
     <Compile Include="C2dmMessageTransportWorker.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="C2dmService.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="App.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
