Added Sample projects, some refactoring, bug fixes

--- a/C2dmSharp.Client/Properties/AndroidManifest.xml
+++ b/C2dmSharp.Client/Properties/AndroidManifest.xml
@@ -20,8 +20,8 @@
 	-->
 	
 		<!-- Only this application can receive the messages and registration result -->
-		<permission android:name="{YOUR.PACKAGE}.permission.C2D_MESSAGE" android:protectionLevel="signature" />
-		<uses-permission android:name="{YOUR.PACKAGE}.permission.C2D_MESSAGE" />
+		<permission android:name="__PackageName__.permission.C2D_MESSAGE" android:protectionLevel="signature" />
+		<uses-permission android:name="__PackageName__.permission.C2D_MESSAGE" />
 
 		<!-- This app has permission to register and receive message -->
 		<uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
