--- a/C2dmSharp.Server/App.config
+++ b/C2dmSharp.Server/App.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
 	<appSettings>
-		<add key="C2DM.GoogleAuthToken" value="" />
 		<add key="C2DM.SenderID" value="" />
+		<add key="C2DM.Password" value="" />
 		<add key="C2DM.ApplicationID" value="" />
 	</appSettings>
 </configuration>
