--- a/C2dmSharp.Client.Sample/Properties/AndroidManifest.xml
+++ b/C2dmSharp.Client.Sample/Properties/AndroidManifest.xml
@@ -3,15 +3,13 @@
   <application android:label="C2dmSharp.Client.Sample">
   </application>
   <uses-sdk android:minSdkVersion="8" />
-	
-	
-	<permission android:name="c2dmsharp.client.sample.permission.C2D_MESSAGE" android:protectionLevel="signature" />
+  <permission android:name="c2dmsharp.client.sample.permission.C2D_MESSAGE" android:protectionLevel="signature" />
 	<uses-permission android:name="c2dmsharp.client.sample.permission.C2D_MESSAGE" />
-
-	<!-- This app has permission to register and receive message -->
-	<uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
-
-	<!-- Send the registration id to the server -->
-	<uses-permission android:name="android.permission.INTERNET" />
 	
+	<uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
+	
+	<uses-permission android:name="android.permission.GET_ACCOUNTS" />
+  <!-- This app has permission to register and receive message -->
+  <!-- Send the registration id to the server -->
+  <uses-permission android:name="android.permission.INTERNET" />
 </manifest>
