--- a/C2dmSharp.Client/Properties/AndroidManifest.xml
+++ b/C2dmSharp.Client/Properties/AndroidManifest.xml
@@ -1,7 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" package="c2dmsharp.client" android:versionCode="1" android:versionName="1.0">
-
-	<!-- BEGIN C2DM Sharp Manifest Data
+  <!-- BEGIN C2DM Sharp Manifest Data
 			 ============================== 
 			 
 			 Inculde this section in your app's AndroidManifest.xml file!
@@ -18,38 +17,19 @@
 			
 			There are 2 instances of {YOUR.PACKAGE} to replace!
 	-->
+  <!-- We make an then use a custom permission so that   -->
+  <permission android:name="__PackageName__.permission.C2D_MESSAGE" android:protectionLevel="signature" />
+	<uses-permission android:name="__PackageName__.permission.C2D_MESSAGE" />
+  
+  <uses-permission android:name="android.permission.INTERNET" />
 	
-		<!-- Only this application can receive the messages and registration result -->
-		<permission android:name="__PackageName__.permission.C2D_MESSAGE" android:protectionLevel="signature" />
-		<uses-permission android:name="__PackageName__.permission.C2D_MESSAGE" />
-
-		<!-- This app has permission to register and receive message -->
-		<uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
-
-		<!-- Send the registration id to the server -->
-		<uses-permission android:name="android.permission.INTERNET" />
-
-		<!-- Only C2DM servers can send messages for the app. If permission is not set - any other app can generate it -->
-		<!-- Experimenting with not needing this anymore :) -
-		<receiver android:name="{YOUR.PACKAGE}.C2dmBroadcastReceiver" android:permission="com.google.android.c2dm.permission.SEND">
-			<intent-filter>
-				<action android:name="com.google.android.c2dm.intent.RECEIVE" />
-				<category android:name="{YOUR.PACKAGE}" />
-			</intent-filter>
-			<intent-filter>
-				<action android:name="com.google.android.c2dm.intent.REGISTRATION" />
-				<category android:name="{YOUR.PACKAGE}" />
-			</intent-filter>
-		</receiver>
-		-->
-	<!-- 
+	<!-- Need this to lookup the com.google accounts to use on for registering c2dm -->
+	<uses-permission android:name="android.permission.GET_ACCOUNTS" />
+  <!-- 
 			 ==============================
 		   END C2DM Sharp Manifest Data  
 	 -->
-	
-	
-	<application android:label="C2dmSharp.Client">
+  <application android:label="C2dmSharp.Client">
   </application>
   <uses-sdk android:minSdkVersion="8" />
-	
 </manifest>
